<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single" android:id="@+id/id2">

        <item
            android:id="@+id/drawer_home"
            android:checked="true"
            android:icon="@mipmap/ic_home_black_24dp"
            android:title="@string/home" />

        <item
            android:id="@+id/drawer_favourite"
            android:icon="@mipmap/ic_favorite_black_24dp"
            android:title="@string/favourite" />

        <item
            android:id="@+id/drawer_downloaded"
            android:icon="@mipmap/ic_file_download_black_24dp"
            android:title="@string/downloaded" />


        <item android:title="@string/sub_item"
              android:layout_gravity="bottom" android:checkable="false"
            >
            <menu>
                <item
                    android:id="@+id/drawer_more"
                    android:icon="@mipmap/ic_more_horiz_black_24dp"
                    android:title="@string/more" />

                <item
                    android:id="@+id/drawer_settings"
                    android:icon="@mipmap/ic_settings_black_24dp"
                    android:title="@string/settings" />
            </menu>
        </item>

    </group>
</menu>